setup companies and course section

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -8,7 +8,7 @@
 	--color-hmoGreen: #5baeb7;
 	--color-hmoLightGreen: #2ecbe9;
 
-	/* extend: {
+	
 		fontsize: {
 			'course-details-heading-small':['26px','36px'],
       'course-details-heading-large': [
@@ -17,8 +17,11 @@
         'home-heading-small':['28px','34px'],
         'home-heading-large':['48px','56px'],
         'default': ['15px', '21px'],
+		},
+		gridTemplateColumns:{
+			"auto":"reapat(auto-fit, minmax(200px, 1fr))"
 		}
-	} */
+	
 }
 
 body {
